tests/pascal/scripts/compile_error/compile_error.pas
program compile_error;

var
  x: integer;

begin
  { Intentional type error: cannot format integer with real specifier }
  writeln(x:0:2);
end.
